# Copyright 2020 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

zx_library("riscv_generic") {
  kernel = true
  sources = [ "riscv_generic_timer.cc" ]
  deps = [
    "$zx/kernel/dev/interrupt",
    "$zx/kernel/dev/pdev",
    "$zx/kernel/lib/arch",
    "$zx/kernel/lib/counters",
    "$zx/kernel/lib/fixed_point",
    "$zx/kernel/lib/init",
    "$zx/kernel/lib/ktl",
    "$zx/kernel/lib/unittest",
    "$zx/system/ulib/affine",
  ]
}
